integrate google auth

--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,6 @@ GOOGLE_CLIENT_SECRET=
 
 RECAPTCHAV3_SITEKEY=sitekey
 RECAPTCHAV3_SECRET=secret
+
+#######################IF-USED-FRONT-END-TECHNOLOGY########################
+FRONT_END_TECH = falseş
