integrate google auth

--- a/.env.example
+++ b/.env.example
@@ -67,4 +67,4 @@ RECAPTCHAV3_SITEKEY=sitekey
 RECAPTCHAV3_SECRET=secret
 
 #######################IF-USED-FRONT-END-TECHNOLOGY########################
-FRONT_END_TECH = falseş
+FRONT_END_TECH = false
