add payment gateway integration

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,8 @@ RECAPTCHAV3_SECRET=secret
 
 #######################IF-USED-FRONT-END-TECHNOLOGY########################
 FRONT_END_TECH = false
+
+
+#######################Razorpay########################
+RAZORPAY_KEY=rzp_test_b5PjHCUMSVjwhB
+RAZORPAY_SECRET=XVDDfizvFNMPfn6TLa1uGlUX
