--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.14",
         "laravel/tinker": "^2.8",
+        "league/fractal": "^0.20.1",
         "razorpay/razorpay": "2.*",
         "spatie/laravel-permission": "^6.7",
         "tymon/jwt-auth": "^2.1"
