--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "league/fractal": "^0.20.1",
         "razorpay/razorpay": "2.*",
         "spatie/laravel-permission": "^6.7",
+        "tinify/tinify": "^1.6",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
