--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/socialite": "^5.14",
         "laravel/tinker": "^2.8",
         "league/fractal": "^0.20.1",
+        "maatwebsite/excel": "^3.1",
         "razorpay/razorpay": "2.*",
         "spatie/laravel-permission": "^6.7",
         "tinify/tinify": "^1.6",
