--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.2",
         "darkaonline/l5-swagger": "^8.6",
+        "elasticsearch/elasticsearch": "^8.14",
         "guzzlehttp/guzzle": "^7.2",
         "josiasmontag/laravel-recaptchav3": "^1.0",
         "laravel/framework": "^10.10",
